# ChangeLog for sys-auth/pam_chroot
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_chroot/ChangeLog,v 1.12 2009/03/22 13:32:37 jmbsvicetto Exp $

  22 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Removing hawking as a maintainer since he was retired.

  21 Mar 2008; Markus Meier <maekke@gentoo.org> pam_chroot-0.9.2.ebuild:
  add ~amd64, bug #185205

*pam_chroot-0.9.2 (01 Oct 2007)

  01 Oct 2007; Ali Polatel <hawking@gentoo.org> +pam_chroot-0.9.2.ebuild:
  version bump.

  09 Sep 2007; Joseph Jezak <josejx@gentoo.org> pam_chroot-0.9.1.ebuild:
  Marked ~ppc for bug #185205.

  25 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  pam_chroot-0.9.1.ebuild:
  Keyworded ~sparc wrt #185205

  24 Jul 2007; Ali Polatel <hawking@gentoo.org>
  +files/pam_chroot-0.9.1-gcc42.patch, pam_chroot-0.9.1.ebuild:
  added patch to fix gcc-4.2 warnings

  18 Jul 2007; Jeroen Roovers <jer@gentoo.org> pam_chroot-0.9.1.ebuild:
  Marked ~hppa (bug #185205).

  17 Jul 2007; Raúl Porcel <armin76@gentoo.org> pam_chroot-0.9.1.ebuild:
  Add ~alpha/~ia64 wrt #185205

  16 Jul 2007; Markus Rothe <corsair@gentoo.org> pam_chroot-0.9.1.ebuild:
  Added ~ppc64; bug #185205

  12 Jul 2007; Ali Polatel <hawking@gentoo.org>
  +files/pam_chroot-0.9.1-makefile.patch, pam_chroot-0.9.1.ebuild:
  Respect $LD and $LDFLAGS (bug #185050)

  12 Jul 2007; Diego Pettenò <flameeyes@gentoo.org>
  pam_chroot-0.9.1.ebuild:
  Block older PAM versions to avoid collisions.

*pam_chroot-0.9.1 (12 Jul 2007)

  12 Jul 2007; Ali Polatel <hawking@gentoo.org> +metadata.xml,
  +pam_chroot-0.9.1.ebuild:
  Import from gentoo-sunrise, bug #160755
