@@ -1,8 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX pam_chroot-0.9.1-gcc42.patch 453 RMD160 8946c09ffe35557e2e6a699fd6945a3816555731 SHA1 c400efc91f45e77628ae721ccfb2b9f505a09fc2 SHA256 5b38930163cfb247c3ffe3b88942f70f8c8ec3af0c95d0a87445ec52a8a1f513
 AUX pam_chroot-0.9.1-makefile.patch 492 RMD160 963d9366335edd9658d0a44dc678b9893ae28833 SHA1 eff6b654ac031865b567f629e0840b993db06c92 SHA256 52a4f2bfd69b18741bb5173433dbd25766053246517ed9dea921d7c06c08b981
-DIST pam_chroot-0.9.1.tar.bz2 14665 RMD160 e8258d63ecec7decf2964f1816355d1731a4d86e SHA1 46fa898d6ba3d621b2972f22f82389912eb29f68 SHA256 92704e384f3470e4940210067669499ee32046ecf350250d44c4137d094c687b
 DIST pam_chroot-0.9.2.tar.bz2 15657 RMD160 9bd99be1ae3f38300bf7a4e11dc9d42cb275b155 SHA1 1dcbbc535a41108f9f9353794784c2cc57a5e3e5 SHA256 101bd0e175c16f7410fdf6a4c04e4015283411efe92790f614f0e0c43cc05ce5
-EBUILD pam_chroot-0.9.1.ebuild 1001 RMD160 181ae7627cc0a4254084ac41829016507dfdcfc4 SHA1 3ded09ee0cf4aa492a3101f9d83ec281200ecb92 SHA256 9b2c9b97749e8ec7c0a7ed4c3886784f8849082cae4e6fc9663d2ee570dfffc3
-EBUILD pam_chroot-0.9.2.ebuild 899 RMD160 e2ccb51d56deb92011e7beaa3bd3201ccb3b1e2e SHA1 b52a4eece7eb0704ad8f105aabb4f3e1097d53ad SHA256 08bd7f19090f9fb1260de1d3f235749df5d2e3c652c2b95433c566a469a9d745
-MISC ChangeLog 1716 RMD160 7adcaa4fc015928012f2e844ba04be44af404819 SHA1 5e365ac317c930915114d04f2873c4f97fae32b5 SHA256 6b67ad0d849205ce7d2ea6fb187562724666063a6623258e9ac9211bde04dd7b
+EBUILD pam_chroot-0.9.2.ebuild 1034 RMD160 0075cb066832c19500b0993cf8e22d78edfb900b SHA1 b3e4f3a6a9c674a41b25ef4b371644ac46a551ef SHA256 bd59695eed1d893de5f0bb4d731bcfec3b357850fb11d574f97ff4a7cf47a68a
+MISC ChangeLog 1939 RMD160 f7e58b8e743c060fac91f6494c32c6e2899ce649 SHA1 6ce7ebfab160646c9cea6bc4ebcfedeb90062b8b SHA256 1e9cd16c82b17df6ab7ecea0e2b870ac77e340f2d8a5c432fdf2a53739249cd0
 MISC metadata.xml 158 RMD160 35494b619ad3586ddb13ed16864ccc4f1f95ba1b SHA1 2efd9c6d60c242aa7d5a5bf54ab48575f41ec4dd SHA256 00d086841cc1f0498550e6a1ee3109a5dbf8fbf33e67f3b8c38396d6e03a71cb
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk3Q6b0ACgkQAiZjviIA2XhuogCdGWxGc6ZwSW7/zj2q7UWT1F5I
+qREAn1GIR+3PKWNJcYpZxivhn26Zg47a
+=EILh
+-----END PGP SIGNATURE-----
