@@ -1,6 +1,11 @@
 # ChangeLog for sys-auth/pam_chroot
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_chroot/ChangeLog,v 1.12 2009/03/22 13:32:37 jmbsvicetto Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_chroot/ChangeLog,v 1.13 2011/05/16 09:09:19 flameeyes Exp $
+
+  16 May 2011; Diego E. Pettenò <flameeyes@gentoo.org>
+  -pam_chroot-0.9.1.ebuild, pam_chroot-0.9.2.ebuild:
+  Remove old version; bypass Makefile and simply build the module within the
+  ebuild, so that -Werror is dropped.
 
   22 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
   metadata.xml:
